--- a/views/index.jade
+++ b/views/index.jade
@@ -12,12 +12,14 @@ block content
         input(type='text', ng-model='form.username', required, placeholder="Enter username")
         button(type='submit',
           ng-click="submit('/user', form)",
-          ng-disabled="userForm.$invalid || submitting || submitted",
-          ng-class="{'form-submitting': submitting, 'form-submitted': submitted}"
+          ng-disabled="userForm.$invalid || state > states.normal",
+          ng-class="{'form-submitting': state == states.submitting, 'form-submitted': state == states.submitted}"
         )
-          span(ng-show="!submitting && !submitted") Submit
-          span(ng-show="submitting"): span(class='glyphicon glyphicon-refresh spinning'): span Submitting
-          span(ng-show="submitted"): span(class='glyphicon glyphicon-ok'): span Submitted
+          span(ng-show="state == states.normal") Submit
+          span(ng-show="state == states.submitting")
+            span(class='glyphicon glyphicon-refresh spinning'): span Submitting
+          span(ng-show="state == states.submitted")
+            span(class='glyphicon glyphicon-ok'): span Submitted
     hr
 
     h2 Live data (angular)
